tests/neg/lexer_bad_escape_in_string.baa
// RUN: expect-fail
// EXPECT: تسلسل هروب غير مدعوم داخل النص

صحيح الرئيسية() {
    نص س = "مرحبا\q".
    إرجع ٠.
}
